# gameboy-eval

./: .dockerignore  .gitignore  EMU-EVAL-DESIGN.md  NOTICE  README.md  abi.html  index.html  pyproject.toml  system-prompt.html
.github/workflows/: pages.yml
env/: Dockerfile  TASK.md
grader/: audio.py  grade.py  procedural_roms.py  replay.py  report.py  runner.py
harness/: generate.py  providers.py
leaderboard/: app.js  index.html  leaderboard.json
leaderboard/artifacts/: claude-opus-4.8.wasm  gpt-5.1-codex.wasm  gpt-oss-120b.wasm  reference.wasm
leaderboard/results/: claude-opus-4.8.json  oracle.json  qwen2.5-coder-7b.json  qwen3-8b.json  rboy.json
oracle/: Dockerfile  oracle  sameboy.py  server.py
reference/known-good/: Cargo.toml
reference/known-good/src/: lib.rs
reference/wasm-smoke/: Cargo.toml
reference/wasm-smoke/src/: lib.rs
scripts/: build_leaderboard.py  fetch_data.py  run-sandbox.sh
spec/: ABI.md
tools/: align_validate.py  audio_validate.py  grade_validate.py  m3b_validate.py  metric_validate.py  oracle_smoke.py  procedural_validate.py  wasm_node_check.mjs  wasm_smoke_check.py
webapp/: app.js  index.html  server.py
